--- a/index.html
+++ b/index.html
@@ -35,6 +35,28 @@
           </nav>
         </div>
       </header>
-    </div>
+      <main class="page">
+        <div class="paige_main-block main-block">
+         <div class="paige_main-container _container">
+          <div class="main-block_body">
+            <h1 class="main-block_title">Finance and Consultancy Solution</h1>
+            <div class="main-block_text">
+              We know how large objects will act, but things on a small scale.
+            </div>
+            <div class="main-block_buttons">
+              <a href="" class="main-block_button main-block_button_orange">Get Quote Now</a>
+              <a href="" class="main-block_button main-block_button_bouder">Learn More</a>
+            </div>
+          </div>
+        </div>
+        <div class="main-block_image _ibg">
+           <img src="img/img_start.svg" alt="cover">
+        </div>
+      </div>
+      </main>
+      <footer class="footer footer">
+        я подвал
+      </footer>
+    
   </body>
 </html>
