--- a/index.html
+++ b/index.html
@@ -52,41 +52,42 @@
         <div class="main-block_image _ibg">
            <img src="img/img_start.svg" alt="cover">
         </div>
-      </div>
-      <section class="page_services services">
-        <div class="services_container _conteiner">
-          <div class="services_body">
-            <div class="services_column">
-              <div class="service_item item-service">
-                <div class="item-service_icon">
-                  <img src="icons/icon 1.svg" alt="Environmental Consulting">
+        </div>
+        <section class="page_services services">
+          <div class="services_container _container">
+            <div class="services_body">
+              <div class="services_column">
+                <div class="service_item item-service">
+                  <div class="item-service_icon">
+                    <img src="icons/icon 1.svg" alt="Environmental Consulting">
+                  </div>
+                  <h3 class="item-service_title">Environmental Consulting</h3>
+                  <div class="item-service_text">We focus on ergonomics and meeting you where you work. </div>
                 </div>
-                <h3 class="item-service_title">Environmental Consulting</h3>
-                <div class="item-service_text">We focus on ergonomics and meeting you where you work. </div>
               </div>
-            </div>
-            <div class="services_column">
-              <div class="service_item item-service">
-                <div class="item-service_icon">
-                  <img src="icons/icon 2.svg" alt="Finance and consultancy ">
+              <div class="services_column">
+                <div class="service_item item-service">
+                  <div class="item-service_icon">
+                    <img src="icons/icon 2.svg" alt="Finance and consultancy ">
+                  </div>
+                  <h3 class="item-service_title">Finance and consultancy </h3>
+                  <div class="item-service_text">Just type what's on your mind and we'll get you there. </div>
                 </div>
-                <h3 class="item-service_title">Finance and consultancy </h3>
-                <div class="item-service_text">Just type what's on your mind and we'll get you there. </div>
-              </div>
-            </div> <div class="services_column">
-              <div class="service_item item-service_green">
-                <div class="item-service_icon">
-                  <img src="icons/icon 3.svg" alt="Financial Services Consulting">
+              </div> 
+              <div class="services_column">
+                <div class="service_item item-service_green">
+                  <div class="item-service_icon">
+                    <img src="icons/icon 3.svg" alt="Financial Services Consulting">
+                  </div>
+                  <h3 class="item-service_title">Financial Services Consulting</h3>
+                  <div class="item-service_text">the quick fox jumps over the lazy dog </div>
                 </div>
-                <h3 class="item-service_title">Financial Services Consulting</h3>
-                <div class="item-service_text">the quick fox jumps over the lazy dog </div>
               </div>
             </div>
           </div>
-        </div>
-      </section>
+        </section>
       </main>
-      <footer class="footer footer">
+      <footer class="footer">
         я подвал
       </footer>
     
