--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="services_container _container">
             <div class="services_body">
               <div class="services_column">
-                <div class="service_item item-service">
+                <div class="services_item item-service">
                   <div class="item-service_icon">
                     <img src="icons/icon 1.svg" alt="Environmental Consulting">
                   </div>
@@ -66,7 +66,7 @@
                 </div>
               </div>
               <div class="services_column">
-                <div class="service_item item-service">
+                <div class="services_item item-service">
                   <div class="item-service_icon">
                     <img src="icons/icon 2.svg" alt="Finance and consultancy ">
                   </div>
@@ -75,7 +75,7 @@
                 </div>
               </div> 
               <div class="services_column">
-                <div class="service_item item-service_green">
+                <div class="services_item item-service_green">
                   <div class="item-service_icon">
                     <img src="icons/icon 3.svg" alt="Financial Services Consulting">
                   </div>
@@ -86,6 +86,202 @@
             </div>
           </div>
         </section>
+        <section class="page_advantages advantages">
+          <div class="advantages_container _container">
+            <div class="advantages_header header-block">
+              <h2 class="header-block_title">Designing Better Experience</h2>
+              <div class="header-block_sub-title">Problems trying to resolve the conflict between the two major realms <br> of Classical physics: Newtonian mechanics 
+            </div>
+          </div>
+            <div class="advantages_body">
+              <div class="advantages_column">
+                <div class="advantages_item">
+                  <div class="advantages_icon"> 
+                    <img src="img/advantages/advantages 1.svg" alt=">Consumer Products ">
+                  </div>
+                  <div class="advantages_value">972 +</div>
+                  <div class="advantages_text">Consumer Products</div>
+                </div>
+              </div>
+              <div class="advantages_column">
+                <div class="advantages_item">
+                  <div class="advantages_icon"> 
+                    <img src="img/advantages/advantages 2.svg" alt=">Financial Services">
+                  </div>
+                  <div class="advantages_value">181 +</div>
+                  <div class="advantages_text">Financial Services</div>
+                </div>
+              </div>
+              <div class="advantages_column">
+                <div class="advantages_item">
+                  <div class="advantages_icon"> 
+                    <img src="img/advantages/advantages 3.svg" alt=">Environmental">
+                  </div>
+                  <div class="advantages_value">98%</div>
+                  <div class="advantages_text">Environmental</div>
+                </div>
+              </div>
+              <div class="advantages_column">
+                <div class="advantages_item">
+                  <div class="advantages_icon"> 
+                    <img src="img/advantages/advantages 4.svg" alt=">Consumer Products ">
+                  </div>
+                  <div class="advantages_value">746 +</div>
+                  <div class="advantages_text">Business & Finance</div>
+                </div>
+              </div>
+            </div>
+           </div>
+        </section>
+        <section class="page_practice practice">
+          <div class="practice_container _container">
+            <div class="practice_header header-block">
+              <h2 class="header-block_title">Practice Advice</h2>
+              <div class="header-block_sub-title">Problems trying to resolve the conflict between <br>
+                the two major realms of Classical physics: Newtonian mechanics  
+            </div>
+          </div>
+          <div class="practice_body">
+            <div class="practice_column">
+              <article class="practice-item item-practice">
+                <div class="item-practice_content">
+                <a href="" class="item-ptactice_link">
+                  <h4 class="item-practice_title">A single source of truth</h4>
+                </a>
+                <div class="item-practice_text">Newton thought that light was made up of 
+                  particles, but then it was discovered </div>
+                </div>
+                <a href="" class="item-practice_image _ibg">
+                  <img src="img/Practice/Practice 1.jpg" alt="A single source 
+                  of truth">
+                </a>
+              </article>
+            </div>
+            <div class="practice_column">
+              <article class="practice-item item-practice">
+                <div class="item-practice_content">
+                <a href="" class="item-ptactice_link">
+                  <h4 class="item-practice_title">Fastest way to organize</h4>
+                </a>
+                <div class="item-practice_text">“Quantum mechanics” is the description of the 
+                  behaviour of matter </div>
+                </div>
+                <a href="" class="item-practice_image _ibg">
+                  <img src="img/Practice/Practice 2.jpg" alt="Fastest way to organize">
+                </a>
+              </article>
+            </div>
+            <div class="practice_column">
+              <article class="practice-item item-practice">
+                <div class="item-practice_content">
+                <a href="" class="item-ptactice_link">
+                  <h4 class="item-practice_title">Fastest way to take action</h4>
+                </a>
+                <div class="item-practice_text">They describe a universe consisting of 
+                  bodies moving </div>
+                </div>
+                <a href="" class="item-practice_image _ibg">
+                  <img src="img/Practice/Practice 3.jpg" alt="Fastest way to take action">
+                </a>
+              </article>
+            </div>
+            <div class="practice_column">
+              <article class="practice-item item-practice">
+                <div class="item-practice_content">
+                <a href="" class="item-ptactice_link">
+                  <h4 class="item-practice_title">Work better together</h4>
+                </a>
+                <div class="item-practice_text">They finally obtained a consistent description 
+                  of the behaviour </div>
+                </div>
+                <a href="" class="item-practice_image _ibg">
+                  <img src="img/Practice/Practice 4.jpg" alt="Work better together">
+                </a>
+              </article>
+            </div>
+          </div>
+        </section>
+        <section class="page_whoweare whoweare">
+          <div class="whoweare_container _container">
+            <div class="whoweare_header header-block">
+              <h2 class="header-block_title">Who We Are</h2>
+              <div class="header-block_sub-title">Problems trying to resolve the conflict between the two major realms <br> of Classical physics: Newtonian mechanics  
+              </div>
+            </div>
+            <div class="whoweare_body">
+              <div class="whoweare_video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/0UUK4VDblXM" 
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                gyroscope; picture-in-picture" allowfullscreen>
+              </iframe>
+              </div>
+              <div class="whoweare_content">
+                <h2 class="whoweare_title">Most trusted in our field</h2>
+                <div class="whoweare_text">Most calendars are designed for teams. Slate is designed for freelancers who want a 
+                  simple way to plan their schedule.</div>
+                <div class="whoweare_item">
+                  <div class="item-whoweare item-whoweare">
+                    <div class="item-whoweare_icon">
+                      <img src="img/whoweare/whoweare 1.svg" alt="man">
+                    </div>
+                    <div class="item-whoweare_body">
+                      <div class="item-whoweare_title">the quick fox jumps over the lazy dog</div>
+                      <div class="item-whoweare_text">Things on a very small scale most calendars are designed for teams. Slate 
+                        is designed for freelancers who want a simple way to plan their schedule. </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="whoweare_item">
+                  <div class="item-whoweare item-whoweare">
+                    <div class="item-whoweare_icon">
+                      <img src="img/whoweare/whoweare 2.svg" alt="clock">
+                    </div>
+                    <div class="item-whoweare_body">
+                      <div class="item-whoweare_title">the quick fox jumps over the lazy dog</div>
+                      <div class="item-whoweare_text">Things on a very small scale most calendars are designed for teams. Slate 
+                        is designed for freelancers who want a simple way to plan their schedule. </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+         </section>
+         <div class="page_clients clients">
+           <div class="clients_container _container">
+             <div class="clients_items">
+              <div class="clients_item">
+                <img src="img/clients/client 1.png" alt="clients">
+              </div>
+              <div class="clients_item">
+                <img src="img/clients/client 2.png" alt="clients">
+              </div>
+              <div class="clients_item">
+                <img src="img/clients/client 3.png" alt="clients">
+              </div>
+              <div class="clients_item">
+                <img src="img/clients/client 4.png" alt="clients">
+              </div>
+              <div class="clients_item">
+                <img src="img/clients/client 5.png" alt="clients">
+              </div>
+              <div class="clients_item">
+                <img src="img/clients/client 6.png" alt="clients">
+              </div>
+            </div>
+           </div>
+          </div>
+        <sectoin class="page_subscribe subscribe">
+          <div class="subscribe_container _container">
+            <div class="subscribe_body">
+              <h4 class="subscribe_title">Subscribe For Latest Newsletter</h4>
+              <form action="#" class="subscribe_form">
+                <input autocomplete="off" type="email" required name="form[]" placeholder="Your Email" class="subscribe_input">
+             <button type="submit" class="subscribe_button">Subscribe</button>
+              </form>
+            </div>
+          </div>
+        </sectoin>
       </main>
       <footer class="footer">
         я подвал
