--- a/index.html
+++ b/index.html
@@ -271,17 +271,77 @@
             </div>
            </div>
           </div>
-        <sectoin class="page_subscribe subscribe">
+        <div class="page_subscribe subscribe">
           <div class="subscribe_container _container">
             <div class="subscribe_body">
               <h4 class="subscribe_title">Subscribe For Latest Newsletter</h4>
               <form action="#" class="subscribe_form">
                 <input autocomplete="off" type="email" required name="form[]" placeholder="Your Email" class="subscribe_input">
-             <button type="submit" class="subscribe_button">Subscribe</button>
+                <button type="submit" class="subscribe_button">Subscribe</button>
               </form>
             </div>
           </div>
-        </sectoin>
+        </div>
+        <section class="page_getintouch getintouch">
+          <div class="getintouch-container _container">
+            <div class="getintouch_header header-block">
+              <h2 class="header-block_title">Get In Touch</h2>
+              <div class="header-block_sub-title">Problems trying to resolve the conflict between <br> 
+                the two major realms of Classical physics: Newtonian mechanics  
+            </div>
+          </div>
+           <div class="getintouch-items"> 
+             <div class="getintouch-item item-getintouch">
+               <div class="item-getintouch_cion">
+                 <img src="img/getintouch icon/getintouch 1.png" alt="phone">
+               </div>
+               <div class="item-getintouch_emails">
+                 <a href="mailto:georgia.young@example.com" class="item-getintouch_email">georgia.young@example.com</a>
+                 <a href="mailto:georgia.young@ple.com" class="item-getintouch_email">georgia.young@ple.com</a>
+                </div>
+               <div class="item-getintouch_label">Get Support</div>
+               <a href="" class="item-getintouch_button">Submit Request</a>
+
+             </div>
+             <div class="getintouch-item item-getintouch item-getintouch_purp">
+              <div class="item-getintouch_cion">
+                <img src="img/getintouch icon/getintouch 2.png" alt="phone">
+              </div>
+              <div class="item-getintouch_emails">
+                <a href="mailto:georgia.young@example.com" class="item-getintouch_email">georgia.young@example.com</a>
+                <a href="mailto:georgia.young@ple.com" class="item-getintouch_email">georgia.young@ple.com</a>
+               </div>
+              <div class="item-getintouch_label">Get Support</div>
+              <a href="" class="item-getintouch_button">Submit Request</a>
+
+            </div>
+            <div class="getintouch-item item-getintouch">
+              <div class="item-getintouch_cion">
+                <img src="img/getintouch icon/getintouch 3.png" alt="phone">
+              </div>
+              <div class="item-getintouch_emails">
+                <a href="mailto:georgia.young@example.com" class="item-getintouch_email">georgia.young@example.com</a>
+                <a href="mailto:georgia.young@ple.com" class="item-getintouch_email">georgia.young@ple.com</a>
+               </div>
+              <div class="item-getintouch_label">Get Support</div>
+              <a href="" class="item-getintouch_button">Submit Request</a>
+
+            </div>
+
+           </div>
+          </div>
+        </section>
+        <section class="page_contact contact">
+         <div class="contact_container _container">
+          <div class="contact_body">
+            <div class="contact_content">
+              <h4 class="contact_title">Consulting Agency For Your Business</h4>
+              <div class="contact_text">the quick fox jumps over the lazy dog</div>
+            </div>
+            <a href="#" class="contact_button">Contact Us</a>
+          </div> 
+         </div> 
+        </section>
       </main>
       <footer class="footer">
         я подвал
