--- a/index.html
+++ b/index.html
@@ -344,7 +344,71 @@
         </section>
       </main>
       <footer class="footer">
-        я подвал
+        <div class="footer_top">
+          <div class="footer_main _container">
+            <div class="footer_column">
+              <div class="footer_label">Company Info</div>
+              <nav class="footer_menu menu-footer">
+                <ul class="menu-footer_list">
+                  <li class="menu-footer_item"><a href="" class="menu-footer_link">About Us</a></li>
+                  <li class="menu-footer_item"><a href="" class="menu-footer_link">Carrier</a></li>
+                  <li class="menu-footer_item"><a href="" class="menu-footer_link">We are hiring</a></li>
+                  <li class="menu-footer_item"><a href="" class="menu-footer_link">Blog</a></li>
+                </ul>
+              </nav>
+
+            </div>
+            <div class="footer_column">
+              <div class="footer_label">Company Info</div>
+              <nav class="footer_menu menu-footer">
+                <ul class="menu-footer_list">
+                  <li class="menu-footer_item"><a href="" class="menu-footer_link">About Us</a></li>
+                  <li class="menu-footer_item"><a href="" class="menu-footer_link">Carrier</a></li>
+                  <li class="menu-footer_item"><a href="" class="menu-footer_link">We are hiring</a></li>
+                  <li class="menu-footer_item"><a href="" class="menu-footer_link">Blog</a></li>
+                </ul>
+              </nav>
+            </div>
+            <div class="footer_column">
+              <div class="footer_label">Company Info</div>
+              <nav class="footer_menu menu-footer">
+                <ul class="menu-footer_list">
+                  <li class="menu-footer_item"><a href="" class="menu-footer_link">About Us</a></li>
+                  <li class="menu-footer_item"><a href="" class="menu-footer_link">Carrier</a></li>
+                  <li class="menu-footer_item"><a href="" class="menu-footer_link">We are hiring</a></li>
+                  <li class="menu-footer_item"><a href="" class="menu-footer_link">Blog</a></li>
+                </ul>
+              </nav>
+            </div>
+            <div class="footer_column">
+              <div class="footer_label">Company Info</div>
+              <nav class="footer_menu menu-footer">
+                <ul class="menu-footer_list">
+                  <li class="menu-footer_item"><a href="" class="menu-footer_link">About Us</a></li>
+                  <li class="menu-footer_item"><a href="" class="menu-footer_link">Carrier</a></li>
+                  <li class="menu-footer_item"><a href="" class="menu-footer_link">We are hiring</a></li>
+                  <li class="menu-footer_item"><a href="" class="menu-footer_link">Blog</a></li>
+                </ul>
+              </nav>
+            </div>
+            <div class="footer_column">
+              <div class="footer_label">Company Info</div>
+              <nav class="footer_menu menu-footer">
+                <ul class="menu-footer_list">
+                  <li class="menu-footer_item"><a href="" class="menu-footer_link">About Us</a></li>
+                  <li class="menu-footer_item"><a href="" class="menu-footer_link">Carrier</a></li>
+                  <li class="menu-footer_item"><a href="" class="menu-footer_link">We are hiring</a></li>
+                  <li class="menu-footer_item"><a href="" class="menu-footer_link">Blog</a></li>
+                </ul>
+              </nav>
+            </div>
+
+          </div>
+        </div>
+        <div class="footer_bottom">
+          <div class="footer_container _container"></div>
+        </div>
+    
       </footer>
     
   </body>
