--- a/index.html
+++ b/index.html
@@ -346,69 +346,81 @@
       <footer class="footer">
         <div class="footer_top">
           <div class="footer_main _container">
-            <div class="footer_column">
-              <div class="footer_label">Company Info</div>
-              <nav class="footer_menu menu-footer">
-                <ul class="menu-footer_list">
-                  <li class="menu-footer_item"><a href="" class="menu-footer_link">About Us</a></li>
-                  <li class="menu-footer_item"><a href="" class="menu-footer_link">Carrier</a></li>
-                  <li class="menu-footer_item"><a href="" class="menu-footer_link">We are hiring</a></li>
-                  <li class="menu-footer_item"><a href="" class="menu-footer_link">Blog</a></li>
-                </ul>
-              </nav>
-
+            <div class="footer_row">
+              <div class="footer_column">
+                <div class="footer_label">Company Info</div>
+                <nav class="footer_menu menu-footer">
+                  <ul class="menu-footer_list">
+                    <li class="menu-footer_item"><a href="" class="menu-footer_link">About Us</a></li>
+                    <li class="menu-footer_item"><a href="" class="menu-footer_link">Carrier</a></li>
+                    <li class="menu-footer_item"><a href="" class="menu-footer_link">We are hiring</a></li>
+                    <li class="menu-footer_item"><a href="" class="menu-footer_link">Blog</a></li>
+                  </ul>
+                </nav>
+              </div>
+              <div class="footer_column">
+                <div class="footer_label">Legal</div>
+                <nav class="footer_menu menu-footer">
+                  <ul class="menu-footer_list">
+                    <li class="menu-footer_item"><a href="" class="menu-footer_link">About Us</a></li>
+                    <li class="menu-footer_item"><a href="" class="menu-footer_link">Carrier</a></li>
+                    <li class="menu-footer_item"><a href="" class="menu-footer_link">We are hiring</a></li>
+                    <li class="menu-footer_item"><a href="" class="menu-footer_link">Blog</a></li>
+                  </ul>
+                </nav>
+              </div>
+              <div class="footer_column">
+                <div class="footer_label">Features</div>
+                <nav class="footer_menu menu-footer">
+                  <ul class="menu-footer_list">
+                    <li class="menu-footer_item"><a href="" class="menu-footer_link">Business Marketing</a></li>
+                    <li class="menu-footer_item"><a href="" class="menu-footer_link">User Analytic</a></li>
+                    <li class="menu-footer_item"><a href="" class="menu-footer_link">Live Chat</a></li>
+                    <li class="menu-footer_item"><a href="" class="menu-footer_link">Unlimited Support</a></li>
+                  </ul>
+                </nav>
+              </div>
+              <div class="footer_column">
+                <div class="footer_label">Resources</div>
+                <nav class="footer_menu menu-footer">
+                  <ul class="menu-footer_list">
+                    <li class="menu-footer_item"><a href="" class="menu-footer_link">IOS & Android</a></li>
+                    <li class="menu-footer_item"><a href="" class="menu-footer_link">Watch a Demo</a></li>
+                    <li class="menu-footer_item"><a href="" class="menu-footer_link">Customers</a></li>
+                    <li class="menu-footer_item"><a href="" class="menu-footer_link">API</a></li>
+                  </ul>
+                </nav>
+              </div>
+              <div class="footer_column">
+                <div class="footer_label">Get In Touch</div>
+                <div class="footer_contacts contacts-footer">
+                  <a href="tel:4805550103" class="contacts-footer_item contacts-footer_item_phone">(480) 555-0103</a>
+                  <p><a href="map/map.html"  class="contacts-footer_item contacts-footer_item_map"  target="_blank">4517 Washington Ave. Manchester, Kentucky 39495</a></p>
+                  <a href="mailto:debra.holt@example.com" class="contacts-footer_item contacts-footer_item_email">debra.holt@example.com</a>
+                </div>
+              </div>
             </div>
-            <div class="footer_column">
-              <div class="footer_label">Company Info</div>
-              <nav class="footer_menu menu-footer">
-                <ul class="menu-footer_list">
-                  <li class="menu-footer_item"><a href="" class="menu-footer_link">About Us</a></li>
-                  <li class="menu-footer_item"><a href="" class="menu-footer_link">Carrier</a></li>
-                  <li class="menu-footer_item"><a href="" class="menu-footer_link">We are hiring</a></li>
-                  <li class="menu-footer_item"><a href="" class="menu-footer_link">Blog</a></li>
-                </ul>
-              </nav>
-            </div>
-            <div class="footer_column">
-              <div class="footer_label">Company Info</div>
-              <nav class="footer_menu menu-footer">
-                <ul class="menu-footer_list">
-                  <li class="menu-footer_item"><a href="" class="menu-footer_link">About Us</a></li>
-                  <li class="menu-footer_item"><a href="" class="menu-footer_link">Carrier</a></li>
-                  <li class="menu-footer_item"><a href="" class="menu-footer_link">We are hiring</a></li>
-                  <li class="menu-footer_item"><a href="" class="menu-footer_link">Blog</a></li>
-                </ul>
-              </nav>
-            </div>
-            <div class="footer_column">
-              <div class="footer_label">Company Info</div>
-              <nav class="footer_menu menu-footer">
-                <ul class="menu-footer_list">
-                  <li class="menu-footer_item"><a href="" class="menu-footer_link">About Us</a></li>
-                  <li class="menu-footer_item"><a href="" class="menu-footer_link">Carrier</a></li>
-                  <li class="menu-footer_item"><a href="" class="menu-footer_link">We are hiring</a></li>
-                  <li class="menu-footer_item"><a href="" class="menu-footer_link">Blog</a></li>
-                </ul>
-              </nav>
-            </div>
-            <div class="footer_column">
-              <div class="footer_label">Company Info</div>
-              <nav class="footer_menu menu-footer">
-                <ul class="menu-footer_list">
-                  <li class="menu-footer_item"><a href="" class="menu-footer_link">About Us</a></li>
-                  <li class="menu-footer_item"><a href="" class="menu-footer_link">Carrier</a></li>
-                  <li class="menu-footer_item"><a href="" class="menu-footer_link">We are hiring</a></li>
-                  <li class="menu-footer_item"><a href="" class="menu-footer_link">Blog</a></li>
-                </ul>
-              </nav>
-            </div>
-
           </div>
         </div>
         <div class="footer_bottom">
-          <div class="footer_container _container"></div>
+          <div class="footer_container _container">
+            <div class="footer_copy">Made With Love By Figmaland All Right Reserved </div>
+           <div class="footer_social social">
+            <a href="" class="social_item">
+              <img src="img/social/social 1.png" alt="face">
+            </a>
+            <a href="" class="social_item">
+               <img src="img/social/social 2.png" alt="insta">
+            </a>
+            <a href="" class="social_item">
+              <img src="img/social/social 3.png" alt="twiter">
+            </a>
+            <a href="" class="social_item">
+               <img src="img/social/social 4.png" alt="youtube">
+            </a>
+           </div>
+          </div>
         </div>
-    
       </footer>
     
   </body>
