--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:regular,500,600,700,800&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
-
     <title>Relvise</title>
   </head>
   <body>
@@ -301,7 +299,6 @@
                 </div>
                <div class="item-getintouch_label">Get Support</div>
                <a href="" class="item-getintouch_button">Submit Request</a>
-
              </div>
              <div class="getintouch-item item-getintouch item-getintouch_purp">
               <div class="item-getintouch_cion">
@@ -325,9 +322,7 @@
                </div>
               <div class="item-getintouch_label">Get Support</div>
               <a href="" class="item-getintouch_button">Submit Request</a>
-
             </div>
-
            </div>
           </div>
         </section>
@@ -422,6 +417,5 @@
           </div>
         </div>
       </footer>
-    
   </body>
 </html>
